Fixed list getting cut off at the bottom

--- a/client/src/components/List/List.scss
+++ b/client/src/components/List/List.scss
@@ -1,5 +1,5 @@
 .list{
-  height: 620px;
+  height: inherit;
   display: flex;
   flex-direction: column;
   flex: 0.6;
