--- a/client/src/components/Playlists/Playlists.scss
+++ b/client/src/components/Playlists/Playlists.scss
@@ -1,6 +1,9 @@
 .content-container{
+  justify-content: center;
+  align-content: center;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   overflow-y: hidden;
+  height: inherit;
 }
